# ai4se_gnusarev_2

./: .gitignore  README.md  pyproject.toml
notebooks/: predict_func_name.ipynb  worst_cases.txt
