[project]
name = "ai4se-gnusarev-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "tree-sitter (==0.22.3)",
    "tree-sitter-python (==0.21.0)",
    "datasets (==2.20.0)",
    "evaluate (==0.4.2)",
    "rouge-score (==0.1.2)",
    "transformers (==4.46.2)",
    "torch (>=2.9.1,<3.0.0)",
    "numpy (>=2.4.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "ai4se_gnusarev_2", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)"
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
